--- a/index.html
+++ b/index.html
@@ -5,8 +5,105 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+  	<header>
+  		<img src="img/nerds-logo.svg" alt="Логотип сайта Нёрдс">
+  		<nav>
+  			<ul>
+  				<li><a href=""></a>Студия</li>
+  				<li><a href=""></a>Клиенты</li>
+  				<li><a href="catalog.html"></a>Магазин</li>
+  				<li><a href=""></a>Контакты</li>
+  			</ul>
+  		</nav>
+  		<img src="img/cart-icon.svg" alt="Иконка корзины">
+    	<div><a href="blank.html"></a>Корзина</div>
+  	</header>
+  	<main>
+  		<section>
+  			<h1>Долго, дорого,<br>скрупулезно.</h1>
+  			<p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
+  			<button>Узнать больше</button>
+  		</section>
+  		<section>
+  			<img src="img/nerds-index-slide1.png">	
+  		</section>
+  		<section>
+  			<img src="img/illustration-1.jpg">	
+  			<h2>Веб-сайты</h2>
+  			<p>Мир никогда не будет прежним<br>после того как увидит ваш сайт</p>
+  			<button>Заказать</button>
+  		</section>
+  		<section>
+  			<img src="img/illustration-2.svg">	
+  			<h2>Приложения</h2>
+  			<p>Покорите топ-10 приложений в<br>AppStore и Google Play</p>
+  			<button>Заказать</button>
+  		</section>
+  		<section>
+  			<img src="img/illustration-3.png">	
+  			<h2>Презентации</h2>
+  			<p>Вы даже не подозреваете,<br>на сколько вы изумительны</p>
+  			<button>Заказать</button>
+  		</section>
+  		<section>
+  			<h2>Мы - маленькая, но гордая<br>студия из Краснодара.</h2>
+  			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br> превыше креатива. Работаем не покладая рук, как роботы.</p>
+  			<p><b>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</b></p>
+  			<ul>
+  				<li>Вебсайтов любой сложности</li>
+  				<li>Мобильных приложений для iOS и Android</li>
+  				<li>Слайдшоу для корпоративных презентаций</li>
+  			</ul>
+  		</section>
+  		<section>
+  			<img src="img/nerds-illustration1.png">
+  			<p><b>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</b></p>
+  			<ul>
+  				<li>146<sup>%</sup><br>
+  					Уровень<br>
+  					самоотдачи
+  				</li>
+  				<li>100<sup>%</sup><br>
+  					Соблюдение<br>
+  					сроков
+  				</li>
+  				<li>50<sup>%</sup><br>
+  					Минимальная<br>
+  					предоплата
+  				</li>
+  			</ul>	
+  		</section>
+  		<section>
+  			<ul>
+  				<li><img src="img/Group 5.svg"></li>
+  				<li><img src="img/logo-2 1.svg"></li>
+  				<li><img src="img/logo-3 1.svg"></li>
+  				<li><img src="img/logo-4 1.svg"></li>
+  			</ul>
+  		</section>
+  	</main>
+  	<footer>
+  		<figure><img src="img/map 1.png"></figure>
+  		<figure><img src="img/map-marker 1.png"></figure>
+  		<section>
+  			<h3>NЁRDS DESIGN STUDIO</h3>
+  			<p>191186, Санкт-Петербург,<br>
+  			ул. Б. Конюшенная, д. 19/8<br><br>
+  			тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a>
+  			</p>
+  			<button>НАПИШИТЕ НАМ</button>
+  		</section>
+  		<section>
+  			<ul>
+  				<li><a href="#"><img src="img/shape 2 copy 3.svg"></a></li>
+  				<li><a href="#"><img src="img/shape 2 copy 3.svg"></a></li>
+  				<li><a href="#"><img src="img/shape 2 copy 3.svg"></a></li>
+  			</ul>
+  		</section>
+  		<section>
+  			<h2>Давайте дружить, это выгодно!</h2>
+  			<p>Скидка 10% для друзей из социальных сетей.</p>
+  		</section>
+  	</footer>
   </body>
 </html>
