--- a/index.html
+++ b/index.html
@@ -6,102 +6,98 @@
   </head>
   <body>
   	<header>
-  		<img src="img/nerds-logo.svg" alt="Логотип сайта Нёрдс">
+  		<a><img src="https://via.placeholder.com/160x65" alt="Логотип"></a>
   		<nav>
   			<ul>
-  				<li><a href=""></a>Студия</li>
-  				<li><a href=""></a>Клиенты</li>
-  				<li><a href="catalog.html"></a>Магазин</li>
-  				<li><a href=""></a>Контакты</li>
+  				<li><a href="">Студия</a></li>
+  				<li><a href="">Клиенты</a></li>
+  				<li><a href="catalog.html">Магазин</a></li>
+  				<li><a href="">Контакты</a></li>
   			</ul>
   		</nav>
-  		<img src="img/cart-icon.svg" alt="Иконка корзины">
-    	<div><a href="blank.html"></a>Корзина</div>
+    	<div><a href="">Корзина</a></div>
   	</header>
   	<main>
+  		<h1>Дизайн-студия Нёрдс</h1>
   		<section>
-  			<h1>Долго, дорого,<br>скрупулезно.</h1>
+  			<h2>Долго, дорого,<br>скрупулезно.</h2>
   			<p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
-  			<button>Узнать больше</button>
+  			<a href="">Узнать больше</a>
   		</section>
   		<section>
-  			<img src="img/nerds-index-slide1.png">	
+  			<img src="https://via.placeholder.com/760x431" alt="Айфоны">	
   		</section>
   		<section>
-  			<img src="img/illustration-1.jpg">	
+  			<img src="https://via.placeholder.com/300x146" alt="Ноутбук">	
   			<h2>Веб-сайты</h2>
-  			<p>Мир никогда не будет прежним<br>после того как увидит ваш сайт</p>
-  			<button>Заказать</button>
+  			<p>Мир никогда не будет прежним после того как увидит ваш сайт</p>
+  			<a href="">Заказать</a>
   		</section>
   		<section>
-  			<img src="img/illustration-2.svg">	
+  			<img src="https://via.placeholder.com/300x146" alt="Телефоны">	
   			<h2>Приложения</h2>
-  			<p>Покорите топ-10 приложений в<br>AppStore и Google Play</p>
-  			<button>Заказать</button>
+  			<p>Покорите топ-10 приложений в AppStore и Google Play</p>
+  			<a href="">Заказать</a>
   		</section>
   		<section>
-  			<img src="img/illustration-3.png">	
+  			<img src="https://via.placeholder.com/300x146" alt="Презентации">	
   			<h2>Презентации</h2>
-  			<p>Вы даже не подозреваете,<br>на сколько вы изумительны</p>
-  			<button>Заказать</button>
+  			<p>Вы даже не подозреваете, на сколько вы изумительны</p>
+  			<a href="">Заказать</a>
   		</section>
   		<section>
-  			<h2>Мы - маленькая, но гордая<br>студия из Краснодара.</h2>
-  			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br> превыше креатива. Работаем не покладая рук, как роботы.</p>
-  			<p><b>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</b></p>
+  			<h2>Мы - маленькая, но гордая студия из Краснодара.</h2>
+  			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+  			<b>Выполняем заказы на разработку:</b>
   			<ul>
   				<li>Вебсайтов любой сложности</li>
   				<li>Мобильных приложений для iOS и Android</li>
   				<li>Слайдшоу для корпоративных презентаций</li>
   			</ul>
-  		</section>
-  		<section>
-  			<img src="img/nerds-illustration1.png">
-  			<p><b>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</b></p>
-  			<ul>
-  				<li>146<sup>%</sup><br>
-  					Уровень<br>
-  					самоотдачи
-  				</li>
-  				<li>100<sup>%</sup><br>
-  					Соблюдение<br>
-  					сроков
-  				</li>
-  				<li>50<sup>%</sup><br>
-  					Минимальная<br>
-  					предоплата
-  				</li>
-  			</ul>	
+  			<img src="https://via.placeholder.com/360x208" alt="Картинка nerds">
+  			<b>c 2004 года любим точость во всем</b>
+  			<table></table>
+  				<tr>
+  					<td>146<sup>%</sup></td>
+  					<td>100<sup>%</sup></td>
+  					<td>50<sup>%</sup></td>
+  				</tr>
+  				<tr>
+  					<td>Уровень<br>самоотдачи</td>
+  					<td>Соблюдение<br>сроков</td>
+  					<td>Минимальная<br>предоплата</td>
+  				</tr>
+  			</table>	
   		</section>
   		<section>
   			<ul>
-  				<li><img src="img/Group 5.svg"></li>
-  				<li><img src="img/logo-2 1.svg"></li>
-  				<li><img src="img/logo-3 1.svg"></li>
-  				<li><img src="img/logo-4 1.svg"></li>
+  				<a href=""><li><img src="https://via.placeholder.com/199x67" alt="Html Academy"></li></a>
+  				<a href=""><li><img src="https://via.placeholder.com/199x67" alt="Borodinsky"></li></a>
+  				<a href=""><li><img src="https://via.placeholder.com/199x67" alt="Pink"></li></a>
+  				<a href=""><li><img src="https://via.placeholder.com/199x67" alt="Mishka"></li></a>
   			</ul>
   		</section>
   	</main>
   	<footer>
-  		<figure><img src="img/map 1.png"></figure>
-  		<figure><img src="img/map-marker 1.png"></figure>
+  		<img src="https://via.placeholder.com/1440x416" alt="Карта">
+  		<img src="https://via.placeholder.com/231x190" alt="Отметка на карте">
   		<section>
-  			<h3>NЁRDS DESIGN STUDIO</h3>
+  			<h2>NЁRDS DESIGN STUDIO</h2>
   			<p>191186, Санкт-Петербург,<br>
-  			ул. Б. Конюшенная, д. 19/8<br><br>
-  			тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a>
+  			ул. Б. Конюшенная, д. 19/8<br>
+  			тел. <p><a href="">+7 (812) 275-75-75</a></p>
   			</p>
-  			<button>НАПИШИТЕ НАМ</button>
+  			<button>Напишите нам</button>
   		</section>
   		<section>
   			<ul>
-  				<li><a href="#"><img src="img/shape 2 copy 3.svg"></a></li>
-  				<li><a href="#"><img src="img/shape 2 copy 3.svg"></a></li>
-  				<li><a href="#"><img src="img/shape 2 copy 3.svg"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/81x81"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/81x81"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/81x81"></a></li>
   			</ul>
   		</section>
   		<section>
-  			<h2>Давайте дружить, это выгодно!</h2>
+  			<b>Давайте дружить, это выгодно!</b>
   			<p>Скидка 10% для друзей из социальных сетей.</p>
   		</section>
   	</footer>
