Исправил главную страницу

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
   	<header>
-  		<a><img src="https://via.placeholder.com/160x65" alt="Логотип"></a>
+  		<a>
+  			<img src="https://via.placeholder.com/160x65" alt="Логотип веб-студии Нёрдс">
+  		</a>
   		<nav>
   			<ul>
   				<li><a href="">Студия</a></li>
@@ -18,82 +20,91 @@
     	<div><a href="">Корзина</a></div>
   	</header>
   	<main>
-  		<h1>Дизайн-студия Нёрдс</h1>
+  		<h1>Веб-студия Нёрдс</h1>
   		<section>
   			<h2>Долго, дорого,<br>скрупулезно.</h2>
   			<p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
   			<a href="">Узнать больше</a>
   		</section>
   		<section>
-  			<img src="https://via.placeholder.com/760x431" alt="Айфоны">	
+  			<img src="https://via.placeholder.com/760x431" alt="Айфоны">
+  			<button type="button" disabled></button>
+    		<button type="button"></button>
+    		<button type="button"></button>	
   		</section>
   		<section>
-  			<img src="https://via.placeholder.com/300x146" alt="Ноутбук">	
-  			<h2>Веб-сайты</h2>
-  			<p>Мир никогда не будет прежним после того как увидит ваш сайт</p>
-  			<a href="">Заказать</a>
+  			<div>
+  				<img src="https://via.placeholder.com/300x146" alt="Ноутбук">	
+  				<h2>Веб-сайты</h2>
+  				<p>Мир никогда не будет прежним после того как увидит ваш сайт</p>
+  				<a href="">Заказать</a>
+  			</div>
+  			<div>
+  				<img src="https://via.placeholder.com/300x146" alt="Телефоны">	
+  				<h2>Приложения</h2>
+  				<p>Покорите топ-10 приложений в AppStore и Google Play</p>
+  				<a href="">Заказать</a>
+  			</div>
+  			<div>
+  				<img src="https://via.placeholder.com/300x146" alt="Презентации">	
+  				<h2>Презентации</h2>
+  				<p>Вы даже не подозреваете, на сколько вы изумительны</p>
+  				<a href="">Заказать</a>
+  			</div>
+  		<section>
+  			<div>
+	  			<h2>Мы - маленькая, но гордая студия из Краснодара.</h2>
+	  			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+	  			<b>Выполняем заказы на разработку:</b>
+	  			<ul>
+	  				<li>Вебсайтов любой сложности</li>
+	  				<li>Мобильных приложений для iOS и Android</li>
+	  				<li>Слайдшоу для корпоративных презентаций</li>
+	  			</ul>
+	  			<img src="https://via.placeholder.com/360x208" alt="Картинка nerds">
+	  			<b>c 2004 года любим точость во всем</b>
+  			</div>
+  			<div>
+	  			<table>
+	  				<tr>
+	  					<td>146<sup>%</sup></td>
+	  					<td>100<sup>%</sup></td>
+	  					<td>50<sup>%</sup></td>
+	  				</tr>
+	  				<tr>
+	  					<th>Уровень<br>самоотдачи</th>
+	  					<th>Соблюдение<br>сроков</th>
+	  					<th>Минимальная<br>предоплата</th>
+	  				</tr>
+	  			</table>
+  			</div>	
   		</section>
   		<section>
-  			<img src="https://via.placeholder.com/300x146" alt="Телефоны">	
-  			<h2>Приложения</h2>
-  			<p>Покорите топ-10 приложений в AppStore и Google Play</p>
-  			<a href="">Заказать</a>
-  		</section>
-  		<section>
-  			<img src="https://via.placeholder.com/300x146" alt="Презентации">	
-  			<h2>Презентации</h2>
-  			<p>Вы даже не подозреваете, на сколько вы изумительны</p>
-  			<a href="">Заказать</a>
-  		</section>
-  		<section>
-  			<h2>Мы - маленькая, но гордая студия из Краснодара.</h2>
-  			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-  			<b>Выполняем заказы на разработку:</b>
   			<ul>
-  				<li>Вебсайтов любой сложности</li>
-  				<li>Мобильных приложений для iOS и Android</li>
-  				<li>Слайдшоу для корпоративных презентаций</li>
-  			</ul>
-  			<img src="https://via.placeholder.com/360x208" alt="Картинка nerds">
-  			<b>c 2004 года любим точость во всем</b>
-  			<table></table>
-  				<tr>
-  					<td>146<sup>%</sup></td>
-  					<td>100<sup>%</sup></td>
-  					<td>50<sup>%</sup></td>
-  				</tr>
-  				<tr>
-  					<td>Уровень<br>самоотдачи</td>
-  					<td>Соблюдение<br>сроков</td>
-  					<td>Минимальная<br>предоплата</td>
-  				</tr>
-  			</table>	
-  		</section>
-  		<section>
-  			<ul>
-  				<a href=""><li><img src="https://via.placeholder.com/199x67" alt="Html Academy"></li></a>
-  				<a href=""><li><img src="https://via.placeholder.com/199x67" alt="Borodinsky"></li></a>
-  				<a href=""><li><img src="https://via.placeholder.com/199x67" alt="Pink"></li></a>
-  				<a href=""><li><img src="https://via.placeholder.com/199x67" alt="Mishka"></li></a>
+  				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Html Academy"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Borodinsky"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Pink"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Mishka"></a></li>
   			</ul>
   		</section>
   	</main>
   	<footer>
-  		<img src="https://via.placeholder.com/1440x416" alt="Карта">
-  		<img src="https://via.placeholder.com/231x190" alt="Отметка на карте">
+  		<div>
+  		<img src="https://via.placeholder.com/1440x416" alt="191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
+  		</div>
   		<section>
   			<h2>NЁRDS DESIGN STUDIO</h2>
   			<p>191186, Санкт-Петербург,<br>
   			ул. Б. Конюшенная, д. 19/8<br>
-  			тел. <p><a href="">+7 (812) 275-75-75</a></p>
-  			</p>
-  			<button>Напишите нам</button>
+  			</p>	
+  			<p>тел.<a href="">+7 (812) 275-75-75</a></p>
+  			<a href="">Напишите нам</a>
   		</section>
   		<section>
   			<ul>
-  				<li><a href=""><img src="https://via.placeholder.com/81x81"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/81x81"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/81x81"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/81x81" alt="Адрес ВК"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/81x81" alt="Адрес ФБ"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/81x81" alt="Адрес Инстаграмм"></a></li>
   			</ul>
   		</section>
   		<section>
