--- a/catalog.html
+++ b/catalog.html
@@ -5,8 +5,75 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-   <h1>Здесь будет страничка шопа:)</h1>
-
+  	<header>
+  		<a href="index.html"> 
+  			<img src="https://via.placeholder.com/160x65" alt="Логотип веб-студии Нёрдс">
+  		</a>
+  		<nav>
+  			<ul>
+  				<li><a href="">Студия</a></li>
+  				<li><a href="">Клиенты</a></li>
+  				<li><a href="catalog.html">Магазин</a></li>
+  				<li><a href="">Контакты</a></li>
+  			</ul>
+  		</nav>
+    	<div><a href="">Корзина</a></div>
+  	</header>
+  	<main>
+  		<h1>Магазин готовых шаблонов</h1>
+  		<section>
+  			<div>
+  				<!-- Форма фильтра -->
+  			</div>
+  			<div>
+  				<h2>Сортировать:</h2>
+  				<ul>
+  					<li>По цене</li>
+  					<li>По типу</li>
+  					<li>По названию</li>
+  				</ul>
+  				<button type="button">Вниз</button>
+    			<button type="button">Вверх</button>	
+  			</div>
+  			<div>
+  			<ul>
+  				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Sedona"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Pink"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Borodinsky"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Mishka"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="A+"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Кваст"></a></li>
+  			</ul>
+  				<button type="button" disabled>1</button>
+    			<button type="button">2</button>
+    			<button type="button">3</button>
+    			<button type="button">Следующая</button>
+  			</div>
+  		</section>
+  	</main>
+  	<footer>
+  		<div>
+  		<img src="https://via.placeholder.com/1440x416" alt="191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
+  		</div>
+  		<section>
+  			<h2>NЁRDS DESIGN STUDIO</h2>
+  			<p>191186, Санкт-Петербург,<br>
+  			ул. Б. Конюшенная, д. 19/8<br>
+  			</p>	
+  			<p>тел.<a href="">+7 (812) 275-75-75</a></p>
+  			<a href="">Напишите нам</a>
+  		</section>
+  		<section>
+  			<ul>
+  				<li><a href=""><img src="https://via.placeholder.com/81x81" alt="Адрес ВК"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/81x81" alt="Адрес ФБ"></a></li>
+  				<li><a href=""><img src="https://via.placeholder.com/81x81" alt="Адрес Инстаграмм"></a></li>
+  			</ul>
+  		</section>
+  		<section>
+  			<b>Давайте дружить, это выгодно!</b>
+  			<p>Скидка 10% для друзей из социальных сетей.</p>
+  		</section>
+  	</footer>
   </body>
 </html>
