--- a/catalog.html
+++ b/catalog.html
@@ -32,8 +32,8 @@
   					<li>По типу</li>
   					<li>По названию</li>
   				</ul>
-  				<button type="button">Вниз</button>
-    			<button type="button">Вверх</button>	
+  				<a href="">Вниз</a>
+  				<a href="">Вверх</a>	
   			</div>
   			<div>
   			<ul>
@@ -44,10 +44,10 @@
   				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="A+"></a></li>
   				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Кваст"></a></li>
   			</ul>
-  				<button type="button" disabled>1</button>
-    			<button type="button">2</button>
-    			<button type="button">3</button>
-    			<button type="button">Следующая</button>
+  				<a href=""disabled>1</a>
+    			<a href=""disabled>2</a>
+    			<a href=""disabled>3</a>
+    			<a href=""disabled>Следующая</a>
   			</div>
   		</section>
   	</main>
