--- a/index.html
+++ b/index.html
@@ -22,15 +22,26 @@
   	<main>
   		<h1>Веб-студия Нёрдс</h1>
   		<section>
-  			<h2>Долго, дорого,<br>скрупулезно.</h2>
-  			<p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
-  			<a href="">Узнать больше</a>
-  		</section>
-  		<section>
-  			<img src="https://via.placeholder.com/760x431" alt="Айфоны">
-  			<button type="button" disabled></button>
-    		<button type="button"></button>
-    		<button type="button"></button>	
+  			<div>
+	  			<h2>Долго, дорого,<br>скрупулезно.</h2>
+	  			<p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
+	  			<a href="">Узнать больше</a>
+  			</div>
+  			<div>
+	  			<h2>Любим математику<br>как никто другой</h2>
+	  			<p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций</p>
+	  			<a href="">Узнать больше</a>
+  			</div>
+  			<div>
+	  			<h2>Только ночь,<br>только хардкор</h2>
+	  			<p>Работать днём, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
+	  			<a href="">Узнать больше</a>
+  			</div>
+  		    <div>
+	  			<button type="button" disabled></button>
+	    		<button type="button"></button>
+	    		<button type="button"></button>	
+    		</div>
   		</section>
   		<section>
   			<div>
