--- a/index.html
+++ b/index.html
@@ -1,96 +1,99 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
-  	<header>
-  		<a>
+  <body class="page-body">
+  	<header class="main-header">
+  		<nav class="main-navigation">
+  		<a class="main-header-logo">
   			<img src="https://via.placeholder.com/160x65" alt="Логотип веб-студии Нёрдс">
   		</a>
-  		<nav>
-  			<ul>
+  			<ul class="site-navigation">
   				<li><a href="">Студия</a></li>
   				<li><a href="">Клиенты</a></li>
   				<li><a href="catalog.html">Магазин</a></li>
   				<li><a href="">Контакты</a></li>
   			</ul>
-  		</nav>
-    	<div><a href="">Корзина</a></div>
+    	<div><a class="basket" href="">Корзина</a></div>
+    	</nav>
   	</header>
-  	<main>
-  		<h1>Веб-студия Нёрдс</h1>
-  		<section>
-  			<div>
-	  			<h2>Долго, дорого,<br>скрупулезно.</h2>
+  	<main class="container">
+  		<h1 class="title">Веб-студия Нёрдс</h1>
+  		<section class="features">
+  			<div class="features-item">
+	  			<h2 class="features-item-title">Долго, дорого,<br>скрупулезно.</h2>
 	  			<p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
-	  			<a href="">Узнать больше</a>
+	  			<a class="button learn-more" href="">Узнать больше</a>
   			</div>
-  			<div>
-	  			<h2>Любим математику<br>как никто другой</h2>
+  			<div class="features-item">
+	  			<h2 class="features-item-title">Любим математику<br>как никто другой</h2>
 	  			<p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций</p>
-	  			<a href="">Узнать больше</a>
+	  			<a class="button learn-more" href="">Узнать больше</a>
   			</div>
-  			<div>
-	  			<h2>Только ночь,<br>только хардкор</h2>
+  			<div class="features-item">
+	  			<h2 class="features-item-title">Только ночь,<br>только хардкор</h2>
 	  			<p>Работать днём, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
-	  			<a href="">Узнать больше</a>
+	  			<a class="button learn-more" href="">Узнать больше</a>
   			</div>
   		    <div>
-	  			<button type="button" disabled></button>
-	    		<button type="button"></button>
-	    		<button type="button"></button>	
+	  			<button class="button features-button" type="button" disabled></button>
+	    		<button class="button features-button" type="button"></button>
+	    		<button class="button features-button" type="button"></button>	
     		</div>
   		</section>
-  		<section>
-  			<div>
-  				<img src="https://via.placeholder.com/300x146" alt="Ноутбук">	
-  				<h2>Веб-сайты</h2>
+  		<section class="products">
+  			<div class="product-item">
+  				<img class="notebooks" src="https://via.placeholder.com/300x146" alt="Ноутбук">	
+  				<h2 class="product-item-title">Веб-сайты</h2>
   				<p>Мир никогда не будет прежним после того как увидит ваш сайт</p>
-  				<a href="">Заказать</a>
+  				<a class="button order-pink" href="">Заказать</a>
   			</div>
-  			<div>
-  				<img src="https://via.placeholder.com/300x146" alt="Телефоны">	
-  				<h2>Приложения</h2>
+  			<div class="product-item">
+  				<img class="phones" src="https://via.placeholder.com/300x146" alt="Телефоны">	
+  				<h2 class="product-item-title">Приложения</h2>
   				<p>Покорите топ-10 приложений в AppStore и Google Play</p>
-  				<a href="">Заказать</a>
+  				<a class="button order-green" href="">Заказать</a>
   			</div>
-  			<div>
-  				<img src="https://via.placeholder.com/300x146" alt="Презентации">	
-  				<h2>Презентации</h2>
+  			<div class="product-item">
+  				<img class="presentation" src="https://via.placeholder.com/300x146" alt="Презентации">	
+  				<h2 class="product-item-title">Презентации</h2>
   				<p>Вы даже не подозреваете, на сколько вы изумительны</p>
-  				<a href="">Заказать</a>
+  				<a class="button order-yellow" href="">Заказать</a>
   			</div>
-  		<section>
-  			<div>
-	  			<h2>Мы - маленькая, но гордая студия из Краснодара.</h2>
+  		<section class="about">
+  			<div class="about-item">
+	  			<h2 class="about-title">Мы - маленькая, но гордая студия из Краснодара.</h2>
 	  			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
 	  			<b>Выполняем заказы на разработку:</b>
 	  			<ul>
-	  				<li>Вебсайтов любой сложности</li>
+	  				<li>Веб-сайтов любой сложности</li>
 	  				<li>Мобильных приложений для iOS и Android</li>
 	  				<li>Слайдшоу для корпоративных презентаций</li>
 	  			</ul>
-	  			<img src="https://via.placeholder.com/360x208" alt="Картинка nerds">
-	  			<b>c 2004 года любим точость во всем</b>
+	  			<img class="about-logo" src="https://via.placeholder.com/360x208" alt="Веб-студия Nerds">
+	  			<b>c 2004 года любим точость во всем:</b>
   			</div>
-  			<div>
+  			<div class="achievments">
 	  			<table>
-	  				<tr>
+	  				<tr class="percents">
 	  					<td>146<sup>%</sup></td>
 	  					<td>100<sup>%</sup></td>
 	  					<td>50<sup>%</sup></td>
 	  				</tr>
 	  				<tr>
-	  					<th>Уровень<br>самоотдачи</th>
-	  					<th>Соблюдение<br>сроков</th>
-	  					<th>Минимальная<br>предоплата</th>
+	  					<td>Уровень<br>самоотдачи</td>
+	  					<td>Соблюдение<br>сроков</td>
+	  					<td>Минимальная<br>предоплата</td>
 	  				</tr>
 	  			</table>
   			</div>	
   		</section>
-  		<section>
+  		<section class="clients">
   			<ul>
   				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Html Academy"></a></li>
   				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Borodinsky"></a></li>
@@ -99,26 +102,26 @@
   			</ul>
   		</section>
   	</main>
-  	<footer>
-  		<div>
-  		<img src="https://via.placeholder.com/1440x416" alt="191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
+  	<footer class="page-footer">
+  		<div class="footer-map">
+  		<img class="map" src="https://via.placeholder.com/1440x416" alt="191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
   		</div>
-  		<section>
-  			<h2>NЁRDS DESIGN STUDIO</h2>
+  		<section class="contacts">
+  			<h2 class="contacts-title">NЁRDS DESIGN STUDIO</h2>
   			<p>191186, Санкт-Петербург,<br>
   			ул. Б. Конюшенная, д. 19/8<br>
   			</p>	
-  			<p>тел.<a href="">+7 (812) 275-75-75</a></p>
-  			<a href="">Напишите нам</a>
+  			<p>тел.<a class="contacts-phone" href="">+7 (812) 275-75-75</a></p>
+  			<a class="button contact-us" href="">Напишите нам</a>
   		</section>
-  		<section>
+  		<section class="networks">
   			<ul>
-  				<li><a href=""><img src="https://via.placeholder.com/81x81" alt="Адрес ВК"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/81x81" alt="Адрес ФБ"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/81x81" alt="Адрес Инстаграмм"></a></li>
+  				<li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес ВК"></a></li>
+  				<li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес ФБ"></a></li>
+  				<li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес Инстаграмм"></a></li>
   			</ul>
   		</section>
-  		<section>
+  		<section class="offer">
   			<b>Давайте дружить, это выгодно!</b>
   			<p>Скидка 10% для друзей из социальных сетей.</p>
   		</section>
