--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -70,7 +70,7 @@
 	  			<h2 class="about-title">Мы - маленькая, но гордая студия из Краснодара.</h2>
 	  			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
 	  			<b>Выполняем заказы на разработку:</b>
-	  			<ul>
+	  			<ul class="about-features">
 	  				<li>Веб-сайтов любой сложности</li>
 	  				<li>Мобильных приложений для iOS и Android</li>
 	  				<li>Слайдшоу для корпоративных презентаций</li>
@@ -94,7 +94,7 @@
   			</div>	
   		</section>
   		<section class="clients">
-  			<ul>
+  			<ul class="clients-list">
   				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Html Academy"></a></li>
   				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Borodinsky"></a></li>
   				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Pink"></a></li>
@@ -115,7 +115,7 @@
   			<a class="button contact-us" href="">Напишите нам</a>
   		</section>
   		<section class="networks">
-  			<ul>
+  			<ul class="networks-list">
   				<li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес ВК"></a></li>
   				<li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес ФБ"></a></li>
   				<li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес Инстаграмм"></a></li>
