--- a/catalog.html
+++ b/catalog.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
-  	<header>
-  		<a href="index.html"> 
-  			<img src="https://via.placeholder.com/160x65" alt="Логотип веб-студии Нёрдс">
-  		</a>
-  		<nav>
-  			<ul>
-  				<li><a href="">Студия</a></li>
-  				<li><a href="">Клиенты</a></li>
-  				<li><a href="catalog.html">Магазин</a></li>
-  				<li><a href="">Контакты</a></li>
-  			</ul>
-  		</nav>
-    	<div><a href="">Корзина</a></div>
-  	</header>
-  	<main>
-  		<h1>Магазин готовых шаблонов</h1>
-  		<section>
-  			<div>
+  <body class="page-body">
+    <header class="main-header">
+      <nav class="main-navigation">
+      <a class="main-header-logo">
+        <img src="https://via.placeholder.com/160x65" alt="Логотип веб-студии Нёрдс">
+      </a>
+        <ul class="site-navigation">
+          <li><a href="">Студия</a></li>
+          <li><a href="">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      <div><a class="basket" href="">Корзина</a></div>
+      </nav>
+    </header>
+  	<main class="container">
+  		<h1 class="catalog-title">Магазин готовых шаблонов</h1>
+  		<section class="catalog">
+  			<div class="filter">
   				<!-- Форма фильтра -->
   			</div>
-  			<div>
-  				<h2>Сортировать:</h2>
-  				<ul>
-  					<li>По цене</li>
-  					<li>По типу</li>
-  					<li>По названию</li>
+  			<div class="sorting">
+  				<h2 class="sorting-title">Сортировать:</h2>
+  				<ul class="sorting-list">
+  					<li><a href="">По цене</a></li>
+  					<li><a href="">По типу</a></li>
+  					<li><a href="">По названию</a></li>
   				</ul>
-  				<a href="">Вниз</a>
-  				<a href="">Вверх</a>	
+  				<a class="button-down" href="">Вниз</a>
+  				<a class="button-up" href="">Вверх</a>	
   			</div>
-  			<div>
-  			<ul>
+  			<div class="template">
+  			<ul class="template-list">
   				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Sedona"></a></li>
   				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Pink"></a></li>
   				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Borodinsky"></a></li>
@@ -47,36 +47,36 @@
   				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="A+"></a></li>
   				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Кваст"></a></li>
   			</ul>
-  				<a href=""disabled>1</a>
-    			<a href=""disabled>2</a>
-    			<a href=""disabled>3</a>
-    			<a href=""disabled>Следующая</a>
+  				<a class="shop-button" href="">1</a>
+    			<a class="shop-button" href="">2</a>
+    			<a class="shop-button" href="">3</a>
+    			<a class="shop-button" href="">Следующая</a>
   			</div>
   		</section>
   	</main>
-  	<footer>
-  		<div>
-  		<img src="https://via.placeholder.com/1440x416" alt="191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
-  		</div>
-  		<section>
-  			<h2>NЁRDS DESIGN STUDIO</h2>
-  			<p>191186, Санкт-Петербург,<br>
-  			ул. Б. Конюшенная, д. 19/8<br>
-  			</p>	
-  			<p>тел.<a href="">+7 (812) 275-75-75</a></p>
-  			<a href="">Напишите нам</a>
-  		</section>
-  		<section>
-  			<ul>
-  				<li><a href=""><img src="https://via.placeholder.com/81x81" alt="Адрес ВК"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/81x81" alt="Адрес ФБ"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/81x81" alt="Адрес Инстаграмм"></a></li>
-  			</ul>
-  		</section>
-  		<section>
-  			<b>Давайте дружить, это выгодно!</b>
-  			<p>Скидка 10% для друзей из социальных сетей.</p>
-  		</section>
-  	</footer>
+  <footer class="page-footer">
+      <div class="footer-map">
+      <img class="map" src="https://via.placeholder.com/1440x416" alt="191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
+      </div>
+      <section class="contacts">
+        <h2 class="contacts-title">NЁRDS DESIGN STUDIO</h2>
+        <p>191186, Санкт-Петербург,<br>
+        ул. Б. Конюшенная, д. 19/8<br>
+        </p>  
+        <p>тел.<a class="contacts-phone" href="">+7 (812) 275-75-75</a></p>
+        <a class="button contact-us" href="">Напишите нам</a>
+      </section>
+      <section class="networks">
+        <ul class="networks-list">
+          <li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес ВК"></a></li>
+          <li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес ФБ"></a></li>
+          <li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес Инстаграмм"></a></li>
+        </ul>
+      </section>
+      <section class="offer">
+        <b>Давайте дружить, это выгодно!</b>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </section>
+    </footer>
   </body>
 </html>
