--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
     <header class="main-header">
       <nav class="main-navigation">
       <a class="main-header-logo">
-        <img src="https://via.placeholder.com/160x65" alt="Логотип веб-студии Нёрдс">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип веб-студии Нёрдс">
       </a>
         <ul class="site-navigation">
           <li><a href="">Студия</a></li>
@@ -41,12 +41,12 @@
           </div>	
   			</div>
   			<ul class="catalog-list">
-  				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Sedona"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Pink"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Borodinsky"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Mishka"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="A+"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/359x578" alt="Кваст"></a></li>
+  				<li><a href=""><img src="img/sedona.png" width="358" height="578" alt="Sedona"></a></li>
+  				<li><a href=""><img src="img/pink.png" width="358" height="578" alt="Pink"></a></li>
+  				<li><a href=""><img src="img/borodinsky.png" width="358" height="578" alt="Borodinsky"></a></li>
+  				<li><a href=""><img src="img/mishka.png" width="358" height="578" alt="Mishka"></a></li>
+  				<li><a href=""><img src="img/aplus.png" width="358" height="578" alt="A+"></a></li>
+  				<li><a href=""><img src="img/kvast.png" width="358" height="578" alt="Кваст"></a></li>
   			</ul>
         <div class="pagination">
   				<a class="pagination-link active">1</a>
@@ -58,7 +58,7 @@
   	</main>
   <footer class="page-footer">
       <div class="footer-map">
-      <img class="map" src="https://via.placeholder.com/1440x416" alt="191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
+      <img class="map" src="img/map.jpg" width="1440" height="416" alt="191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
       </div>
       <section class="contacts">
         <h2 class="contacts-title">NЁRDS DESIGN STUDIO</h2>
