--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body class="page-body">
   	<header class="main-header">
   		<nav class="main-navigation">
-  		<a class="main-header-logo">
-  			<img src="https://via.placeholder.com/160x65" alt="Логотип веб-студии Нёрдс">
-  		</a>
+	  		<a class="main-header-logo">
+	  			<img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип веб-студии Nerds"></a>
+	  		</a>
   			<ul class="site-navigation">
   				<li><a href="">Студия</a></li>
   				<li><a href="">Клиенты</a></li>
@@ -95,16 +95,16 @@
   		</section>
   		<section class="clients">
   			<ul class="clients-list">
-  				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Html Academy"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Borodinsky"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Pink"></a></li>
-  				<li><a href=""><img src="https://via.placeholder.com/199x67" alt="Mishka"></a></li>
+  				<li><a href=""><img src="img/htmlacademy-logo.svg" width="199" height="68" alt="Html Academy"></a></li>
+  				<li><a href=""><img src="img/borodinsky-logo.svg" width="209" height="90" alt="Borodinsky"></a></li>
+  				<li><a href=""><img src="img/pink-logo.svg" width="185" height="52" alt="Pink"></a></li>
+  				<li><a href=""><img src="img/mishka-logo.svg" width="173" height="84" alt="Mishka"></a></li>
   			</ul>
   		</section>
   	</main>
   	<footer class="page-footer">
   		<div class="footer-map">
-  		<img class="map" src="https://via.placeholder.com/1440x416" alt="191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
+  		<img class="map" src="img/map.jpg" width="1440" height="416" alt="191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
   		</div>
   		<section class="contacts">
   			<h2 class="contacts-title">NЁRDS DESIGN STUDIO</h2>
