--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 	  				<li>Мобильных приложений для iOS и Android</li>
 	  				<li>Слайдшоу для корпоративных презентаций</li>
 	  			</ul>
-	  			<img class="about-logo" src="https://via.placeholder.com/360x208" alt="Веб-студия Nerds">
-	  			<b>c 2004 года любим точость во всем:</b>
   			</div>
   			<div class="achievments">
+  				<img class="about-logo" src="https://via.placeholder.com/360x208" alt="Веб-студия Nerds">
+	  			<b>c 2004 года любим точость во всем:</b>
 	  			<table>
 	  				<tr class="percents">
 	  					<td>146<sup>%</sup></td>
@@ -114,6 +114,7 @@
   			<p>тел.<a class="contacts-phone" href="">+7 (812) 275-75-75</a></p>
   			<a class="button contact-us" href="">Напишите нам</a>
   		</section>
+  		<div class="footer-container">
   		<section class="networks">
   			<ul class="networks-list">
   				<li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес ВК"></a></li>
@@ -125,6 +126,7 @@
   			<b>Давайте дружить, это выгодно!</b>
   			<p>Скидка 10% для друзей из социальных сетей.</p>
   		</section>
+  		</div>
   	</footer>
   </body>
 </html>
