--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
       <div><a class="basket" href="">Корзина</a></div>
       </nav>
     </header>
-  	<main class="container">
+  	<main class="shop-container">
   		<h1 class="catalog-title">Магазин готовых шаблонов</h1>
   		<section class="catalog">
   			<div class="catalog-filter">
