Сетка главной страницы

--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
   </head>
   <body class="page-body">
   	<header class="main-header">
-  		<nav class="main-navigation">
-	  		<a class="main-header-logo">
-	  			<img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип веб-студии Nerds"></a>
-	  		</a>
-  			<ul class="site-navigation">
-  				<li><a href="">Студия</a></li>
-  				<li><a href="">Клиенты</a></li>
-  				<li><a href="catalog.html">Магазин</a></li>
-  				<li><a href="">Контакты</a></li>
-  			</ul>
-    	<div><a class="basket" href="">Корзина</a></div>
-    	</nav>
+  		<div class="container">
+	  		<nav class="main-navigation">
+		  		<a class="main-header-logo">
+		  			<img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип веб-студии Nerds"></a>
+		  		</a>
+	  			<ul class="site-navigation">
+	  				<li><a href="">Студия</a></li>
+	  				<li><a href="">Клиенты</a></li>
+	  				<li><a href="catalog.html">Магазин</a></li>
+	  				<li><a href="">Контакты</a></li>
+	  			</ul>
+	    	<div><a class="basket" href="">Корзина</a></div>
+	    	</nav>
+   		</div>
   	</header>
-  	<main class="container">
+  	<main>
   		<h1 class="title">Веб-студия Нёрдс</h1>
   		<section class="features">
+  			<div class="container">
   			<div class="features-item">
 	  			<h2 class="features-item-title">Долго, дорого,<br>скрупулезно.</h2>
 	  			<p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
@@ -45,7 +48,9 @@
 	    		<button class="button features-button" type="button"></button>
 	    		<button class="button features-button" type="button"></button>	
     		</div>
+    		</div>
   		</section>
+  		<div class="container">
   		<section class="products">
   			<div class="product-item">
   				<img class="notebooks" src="https://via.placeholder.com/300x146" alt="Ноутбук">	
@@ -65,6 +70,7 @@
   				<p>Вы даже не подозреваете, на сколько вы изумительны</p>
   				<a class="button order-yellow" href="">Заказать</a>
   			</div>
+  		</section>
   		<section class="about">
   			<div class="about-item">
 	  			<h2 class="about-title">Мы - маленькая, но гордая студия из Краснодара.</h2>
@@ -101,6 +107,7 @@
   				<li><a href=""><img src="img/mishka-logo.svg" width="173" height="84" alt="Mishka"></a></li>
   			</ul>
   		</section>
+  	</div>
   	</main>
   	<footer class="page-footer">
   		<div class="footer-map">
@@ -114,7 +121,7 @@
   			<p>тел.<a class="contacts-phone" href="">+7 (812) 275-75-75</a></p>
   			<a class="button contact-us" href="">Напишите нам</a>
   		</section>
-  		<div class="footer-container">
+  		<div class="container footer-container">
   		<section class="networks">
   			<ul class="networks-list">
   				<li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес ВК"></a></li>
