--- a/catalog.html
+++ b/catalog.html
@@ -9,25 +9,32 @@
   </head>
   <body class="page-body">
     <header class="main-header">
-      <nav class="main-navigation">
-      <a class="main-header-logo">
-        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип веб-студии Нёрдс">
-      </a>
-        <ul class="site-navigation">
-          <li><a href="">Студия</a></li>
-          <li><a href="">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      <div><a class="basket" href="">Корзина</a></div>
-      </nav>
+      <div class="container">
+        <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип веб-студии Нёрдс">
+        </a>
+          <ul class="site-navigation">
+            <li><a href="">Студия</a></li>
+            <li><a href="">Клиенты</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
+            <li><a href="">Контакты</a></li>
+          </ul>
+        <div><a class="basket" href="">Корзина</a></div>
+        </nav>
+      </div>
     </header>
   	<main class="shop-container">
-  		<h1 class="catalog-title">Магазин готовых шаблонов</h1>
-  		<section class="catalog">
+      <div class="catalog-title">
+  		<div class="container">
+        <h1">Магазин готовых шаблонов</h1>
+      </div>
+      </div>
+  		<section class="catalog container">
   			<div class="catalog-filter">
   				<!-- Форма фильтра -->
   			</div>
+        <div>
   			<div class="catalog-sort">
   				<h2 class="catalog-sort-title">Сортировать:</h2>
   				<ul class="catalog-sort-list">
@@ -43,7 +50,7 @@
   			<ul class="catalog-list">
   				<li><a href=""><img src="img/sedona.png" width="358" height="578" alt="Sedona"></a></li>
   				<li><a href=""><img src="img/pink.png" width="358" height="578" alt="Pink"></a></li>
-  				<li><a href=""><img src="img/borodinsky.png" width="358" height="578" alt="Borodinsky"></a></li>
+  				<li><a href=""><img src="img/barbershop.png" width="358" height="578" alt="Borodinsky"></a></li>
   				<li><a href=""><img src="img/mishka.png" width="358" height="578" alt="Mishka"></a></li>
   				<li><a href=""><img src="img/aplus.png" width="358" height="578" alt="A+"></a></li>
   				<li><a href=""><img src="img/kvast.png" width="358" height="578" alt="Кваст"></a></li>
@@ -54,6 +61,7 @@
     			<a class="pagination-link" href="">3</a>
     			<a class="pagination-link pagination-link-next" href="">Следующая</a>
         </div>
+      </div>
   		</section>
   	</main>
   <footer class="page-footer">
@@ -68,6 +76,7 @@
         <p>тел.<a class="contacts-phone" href="">+7 (812) 275-75-75</a></p>
         <a class="button contact-us" href="">Напишите нам</a>
       </section>
+      <div class="container footer-container">
       <section class="networks">
         <ul class="networks-list">
           <li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес ВК"></a></li>
