Флексы на главной странице

--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
         </nav>
       </div>
     </header>
-  	<main class="shop-container">
+  	<main>
       <div class="catalog-title">
   		<div class="container">
         <h1">Магазин готовых шаблонов</h1>
