--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   		<h1 class="title">Веб-студия Нёрдс</h1>
   		<section class="features">
   			<div class="container">
-  			<div class="features-item">
+  			<div class="features-item active">
 	  			<h2 class="features-item-title">Долго, дорого,<br>скрупулезно.</h2>
 	  			<p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
 	  			<a class="button learn-more" href="">Узнать больше</a>
