--- a/catalog.html
+++ b/catalog.html
@@ -27,7 +27,7 @@
   	<main>
       <div class="catalog-title">
   		<div class="container">
-        <h1">Магазин готовых шаблонов</h1>
+        <h1>Магазин готовых шаблонов</h1>
       </div>
       </div>
   		<section class="catalog container">
