--- a/catalog.html
+++ b/catalog.html
@@ -25,9 +25,9 @@
       </div>
     </header>
   	<main>
-      <div class="catalog-title">
+      <div class="intro">
   		<div class="container">
-        <h1>Магазин готовых шаблонов</h1>
+        <h1 class="page-title">Магазин готовых шаблонов</h1>
       </div>
       </div>
   		<section class="catalog container">
