Декор главной страницы

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 	  				<li><a href="catalog.html">Магазин</a></li>
 	  				<li><a href="">Контакты</a></li>
 	  			</ul>
-	    	<div><a class="basket" href="">Корзина</a></div>
+	    	<div class="user-navigation"><a class="basket" href="">Корзина</a></div>
 	    	</nav>
    		</div>
   	</header>
   	<main>
-  		<h1 class="title">Веб-студия Нёрдс</h1>
+  		<h1 class="visually-hidden">Веб-студия Нёрдс</h1>
   		<section class="features">
   			<div class="container">
   			<div class="features-item active">
@@ -44,36 +44,36 @@
 	  			<a class="button learn-more" href="">Узнать больше</a>
   			</div>
   		    <div>
-	  			<button class="button features-button" type="button" disabled></button>
-	    		<button class="button features-button" type="button"></button>
-	    		<button class="button features-button" type="button"></button>	
+	  			<button class="features-button features-button-active" type="button" disabled></button>
+	    		<button class="features-button" type="button"></button>
+	    		<button class="features-button" type="button"></button>	
     		</div>
     		</div>
   		</section>
   		<div class="container">
   		<section class="products">
   			<div class="product-item">
-  				<img class="notebooks" src="https://via.placeholder.com/300x146" alt="Ноутбук">	
+  				<img class="notebooks" src="img/product-1.jpg" width="300" height="160" alt="Ноутбук">	
   				<h2 class="product-item-title">Веб-сайты</h2>
   				<p>Мир никогда не будет прежним после того как увидит ваш сайт</p>
   				<a class="button order-pink" href="">Заказать</a>
   			</div>
   			<div class="product-item">
-  				<img class="phones" src="https://via.placeholder.com/300x146" alt="Телефоны">	
+  				<img class="phones" src="img/product-2.jpg" width="300" height="160" alt="Телефоны">	
   				<h2 class="product-item-title">Приложения</h2>
-  				<p>Покорите топ-10 приложений в AppStore и Google Play</p>
+  				<p>Покорите топ-10 приложений<br>в AppStore и Google Play</p>
   				<a class="button order-green" href="">Заказать</a>
   			</div>
   			<div class="product-item">
-  				<img class="presentation" src="https://via.placeholder.com/300x146" alt="Презентации">	
+  				<img class="presentation" src="img/product-3.jpg" width="300" height="160" alt="Презентации">	
   				<h2 class="product-item-title">Презентации</h2>
-  				<p>Вы даже не подозреваете, на сколько вы изумительны</p>
+  				<p>Вы даже не подозреваете,<br>на сколько вы изумительны</p>
   				<a class="button order-yellow" href="">Заказать</a>
   			</div>
   		</section>
   		<section class="about">
   			<div class="about-item">
-	  			<h2 class="about-title">Мы - маленькая, но гордая студия из Краснодара.</h2>
+	  			<h2 class="about-title">Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
 	  			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
 	  			<b>Выполняем заказы на разработку:</b>
 	  			<ul class="about-features">
@@ -83,7 +83,7 @@
 	  			</ul>
   			</div>
   			<div class="achievments">
-  				<img class="about-logo" src="https://via.placeholder.com/360x208" alt="Веб-студия Nerds">
+  				<img class="about-logo" src="img/nerds-logo-2.png" width="360" height="208" alt="Веб-студия Nerds">
 	  			<b>c 2004 года любим точость во всем:</b>
 	  			<table>
 	  				<tr class="percents">
@@ -124,9 +124,9 @@
   		<div class="container footer-container">
   		<section class="networks">
   			<ul class="networks-list">
-  				<li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес ВК"></a></li>
-  				<li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес ФБ"></a></li>
-  				<li><a href=""><img class="networks-icon" src="https://via.placeholder.com/81x81" alt="Адрес Инстаграмм"></a></li>
+  				<li><a href=""><img class="networks-icon vk-icon" src="img/vk-icon.svg" width="26" height="15" alt="Адрес ВК"></a></li>
+  				<li><a href=""><img class="networks-icon fb-icon" src="img/fb-icon.svg" width="12" height="22" alt="Адрес ФБ"></a></li>
+  				<li><a href=""><img class="networks-icon insta-icon" src="img/insta-icon.svg" width="21" height="21" alt="Адрес Инстаграмм"></a></li>
   			</ul>
   		</section>
   		<section class="offer">
