--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	  			<p>Работать днём, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
 	  			<a class="button learn-more" href="">Узнать больше</a>
   			</div>
-  		    <div>
+  		    <div class="features-pagination">
 	  			<button class="features-button features-button-active" type="button" disabled></button>
 	    		<button class="features-button" type="button"></button>
 	    		<button class="features-button" type="button"></button>	
@@ -53,19 +53,19 @@
   		<div class="container">
   		<section class="products">
   			<div class="product-item">
-  				<img class="notebooks" src="img/product-1.jpg" width="300" height="160" alt="Ноутбук">	
+  				<img class="notebooks" src="img/product-1.png" width="300" height="160" alt="Ноутбук">	
   				<h2 class="product-item-title">Веб-сайты</h2>
   				<p>Мир никогда не будет прежним после того как увидит ваш сайт</p>
   				<a class="button order-pink" href="">Заказать</a>
   			</div>
   			<div class="product-item">
-  				<img class="phones" src="img/product-2.jpg" width="300" height="160" alt="Телефоны">	
+  				<img class="phones" src="img/product-2.png" width="300" height="160" alt="Телефоны">	
   				<h2 class="product-item-title">Приложения</h2>
   				<p>Покорите топ-10 приложений<br>в AppStore и Google Play</p>
   				<a class="button order-green" href="">Заказать</a>
   			</div>
   			<div class="product-item">
-  				<img class="presentation" src="img/product-3.jpg" width="300" height="160" alt="Презентации">	
+  				<img class="presentation" src="img/product-3.png" width="300" height="160" alt="Презентации">	
   				<h2 class="product-item-title">Презентации</h2>
   				<p>Вы даже не подозреваете,<br>на сколько вы изумительны</p>
   				<a class="button order-yellow" href="">Заказать</a>
@@ -110,9 +110,10 @@
   	</div>
   	</main>
   	<footer class="page-footer">
-  		<div class="footer-map">
-  		<img class="map" src="img/map.jpg" width="1440" height="416" alt="191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
+  		<div class="map">
+  		<img src="img/map.jpg" width="1440" height="416" alt="191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
   		</div>
+  		<div class="container footer-container">
   		<section class="contacts">
   			<h2 class="contacts-title">NЁRDS DESIGN STUDIO</h2>
   			<p>191186, Санкт-Петербург,<br>
@@ -121,7 +122,6 @@
   			<p>тел.<a class="contacts-phone" href="">+7 (812) 275-75-75</a></p>
   			<a class="button contact-us" href="">Напишите нам</a>
   		</section>
-  		<div class="container footer-container">
   		<section class="networks">
   			<ul class="networks-list">
   				<li><a href=""><img class="networks-icon vk-icon" src="img/vk-icon.svg" width="26" height="15" alt="Адрес ВК"></a></li>
